# champion-draft

./: .gitignore  .gitmodules  README.md  deploy.sh  example.xdapp.config.json  orchestrator.js  orchestrator.mjs  package.json  xdapp.config.json
.github/workflows/: codeql-analysis.yml
chains/evm/src/: CoreGame.sol  Messenger.sol
chains/evm/src/Wormhole/: Messenger.sol
chains/evm/src/helpers/: GameHelpers.sol
chains/evm/src/lib/: GameLib.sol
chains/evm/src/modules/: GamexBattle.sol  GamexRegister.sol
chains/evm/test/: BreadCollection.sol  CoreGame.t.sol
chains/solana/: Anchor.toml  package-lock.json  package.json
chains/solana/programs/core_game/: Cargo.toml
chains/solana/programs/core_game/src/: context.rs  data.rs  lib.rs
chains/solana/programs/solana/: Cargo.toml  context.rs
chains/solana/programs/solana/src/: data.rs  lib.rs
chains/solana/programs/wormhole-solana-sdk/src/: context.rs  lib.rs
chains/solana/tests/: core_game.ts
frontend/: package-lock.json  package.json
frontend/abi/: IERC721.js
frontend/components/: battleStarter.tsx  battleSummary.tsx  chainSelector.tsx  championCard.tsx  championRegistrar.tsx  championUpgrade.tsx  championViewer.tsx  championXP.tsx  countdown.tsx  metamaskButton.tsx  roundsView.tsx  tokenSelector.tsx  upgradeView.tsx
frontend/pages/: _app.tsx  battle.tsx  index.tsx
frontend/styles/: globals.css
frontend/util/: chainConnection.ts  ercInterfaces.ts  hooks.ts  random.ts  storage.ts
frontend/util/chains/solana/: orchestrator.ts
server/: listener.py  requirements.txt  server.py
